// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages router > /messages/old > GET sends 400 when missing necessary props 1`] = `
{
  "error": "Missing query parameters: user, partner",
}
`;

exports[`messages router > /messages/old > GET sends opened messages in order 1`] = `
[
  {
    "date": "2025-03-18T13:08:38.024Z",
    "message": "0. message",
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:39.024Z",
    "message": "1. message",
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:40.024Z",
    "message": "2. message",
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:41.024Z",
    "message": "3. message",
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
  {
    "date": "2025-03-18T13:08:42.024Z",
    "message": "4. message",
    "receiver": "TestUser2",
    "sender": "TestUser1",
  },
]
`;

exports[`messages router > GET sends 400 if any of necessary query params are missing 1`] = `
{
  "error": "Missing query parameters: sender",
}
`;

exports[`messages router > GET sends 400 if any of necessary query params are missing 2`] = `
{
  "error": "Missing query parameters: receiver",
}
`;

exports[`messages router > GET sends 400 if any of necessary query params are missing 3`] = `
{
  "error": "Missing query parameters: sender, receiver",
}
`;

exports[`messages router > GET sends an message to an user 1`] = `
[
  {
    "date": "2025-03-18T13:08:43.024Z",
    "message": "Some random message",
  },
]
`;

exports[`messages router > GET sends messages based on clients timestamp not request timestamp 1`] = `
[
  {
    "date": "2025-03-18T13:08:33.024Z",
    "message": "First message that arrived later to the server (delayed 10 seconds)",
  },
  {
    "date": "2025-03-18T13:08:38.024Z",
    "message": "Second message that arrived to server first (delayed 5 seconds)",
  },
]
`;

exports[`messages router > POST checks for new messages from receiver between requests 1`] = `
[
  {
    "date": "2025-03-18T13:08:43.024Z",
    "message": "Meantime message",
  },
]
`;

exports[`messages router > POST sends 400 if any of necessary body props are missing 1`] = `
{
  "error": "Missing body property/ies: sender",
}
`;
